Style information box, fix massive gap in-between items
A max-width prevents the items from growing too large
when space is provided
Flex wrap prevents items from shrinking when not
necessary

A flex-growth of 0 and flex basis of 200px for .info
divs prevents text from aligning itself on one Line
Makes for a prettier layout.

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -4,6 +4,21 @@ body {
   flex-flow: column nowrap;
   align-items: center;
 }
+.title {
+  margin-bottom: 50px;
+}
+.information-box {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1000px;
+
+}
+
+.info {
+  flex: 0 1 200px;
+}
 
 img {
   width: 100px;
